--- a/index.html
+++ b/index.html
@@ -42,3 +42,24 @@
 <script src="script.js"></script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="mn">
+<head>
+  <meta charset="UTF-8">
+  <title>Оюунсанаа Ном</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <!-- Номын хуудаснууд -->
+  <div class="book">
+    <img src="pages/1.png" alt="Page 1">
+    <img src="pages/2.png" alt="Page 2">
+    <img src="pages/3.png" alt="Page 3">
+    <!-- … ингэж 64 хүртэл үргэлжилнэ -->
+    <img src="pages/64.png" alt="Page 64">
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
